--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,40 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "29c5d3ae-244f-418c-8adf-f53b119b488b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting pandas\n",
-      "  Downloading pandas-2.2.3-cp313-cp313-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (89 kB)\n",
-      "Requirement already satisfied: numpy>=1.26.0 in /usr/lib64/python3.13/site-packages (from pandas) (1.26.4)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/lib/python3.13/site-packages (from pandas) (2.8.2)\n",
-      "Collecting pytz>=2020.1 (from pandas)\n",
-      "  Downloading pytz-2025.2-py2.py3-none-any.whl.metadata (22 kB)\n",
-      "Collecting tzdata>=2022.7 (from pandas)\n",
-      "  Downloading tzdata-2025.2-py2.py3-none-any.whl.metadata (1.4 kB)\n",
-      "Requirement already satisfied: six>=1.5 in /usr/lib/python3.13/site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n",
-      "Downloading pandas-2.2.3-cp313-cp313-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (12.7 MB)\n",
-      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.7/12.7 MB\u001b[0m \u001b[31m3.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0mm eta \u001b[36m0:00:01\u001b[0m0:01\u001b[0m:01\u001b[0m\n",
-      "\u001b[?25hDownloading pytz-2025.2-py2.py3-none-any.whl (509 kB)\n",
-      "Downloading tzdata-2025.2-py2.py3-none-any.whl (347 kB)\n",
-      "Installing collected packages: pytz, tzdata, pandas\n",
-      "Successfully installed pandas-2.2.3 pytz-2025.2 tzdata-2025.2\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install --user pandas"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "ada822ce-3463-41e9-9b8b-bb0a7ea735ae",
    "metadata": {},
    "outputs": [],
@@ -47,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 2,
    "id": "1ddb4f6a-1d99-4eeb-b367-5907fcb52d04",
    "metadata": {},
    "outputs": [],
@@ -57,17 +24,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 3,
    "id": "4c3d8c09-bcbc-4589-9ab1-f1ee26060572",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/home/comicfans/project/gallary-rust'"
+       "'/home/xwang/project/gallary-rust'"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,12 +46,284 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 16,
+   "id": "36bcffc8-1dfc-444c-813d-9f2531777543",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting polars\n",
+      "  Downloading polars-1.29.0-cp39-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (34.8 MB)\n",
+      "\u001b[2K     \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m34.8/34.8 MB\u001b[0m \u001b[31m53.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0mm eta \u001b[36m0:00:01\u001b[0m[36m0:00:01\u001b[0m\n",
+      "Installing collected packages: polars\n",
+      "Successfully installed polars-1.29.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install --user polars"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "1a7ad860-0f6d-4489-9916-f782a5509304",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "DeltaError",
+     "evalue": "Generic error: A table already exists at: /home/xwang/project/gallary-rust/here/",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mDeltaError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_2758127/2395871429.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mwrite_deltalake\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'here'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/.local/lib/python3.10/site-packages/deltalake/writer.py\u001b[0m in \u001b[0;36mwrite_deltalake\u001b[0;34m(table_or_uri, data, schema, partition_by, mode, file_options, max_partitions, max_open_files, max_rows_per_file, min_rows_per_group, max_rows_per_group, name, description, configuration, schema_mode, storage_options, partition_filters, predicate, target_file_size, large_dtypes, engine, writer_properties, custom_metadata, post_commithook_properties, commit_properties)\u001b[0m\n\u001b[1;32m    322\u001b[0m         \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mRecordBatchReader\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrom_batches\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mschema\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mbatch\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mbatch\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    323\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mtable\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 324\u001b[0;31m             table._table.write(\n\u001b[0m\u001b[1;32m    325\u001b[0m                 \u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    326\u001b[0m                 \u001b[0mpartition_by\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mpartition_by\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mDeltaError\u001b[0m: Generic error: A table already exists at: /home/xwang/project/gallary-rust/here/"
+     ]
+    }
+   ],
+   "source": [
+    "write_deltalake('here', df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "85e2034b-757a-4ec9-b560-f0df17030aec",
    "metadata": {},
    "outputs": [],
    "source": [
-    "write_deltalake('here', df)"
+    "import polars"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "8163cf03-b915-4bfe-a984-44165701a493",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=polars.read_delta(\"here\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "a26449d2-9b98-4784-be5f-50f8355145a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (6, 1)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>path</th></tr><tr><td>str</td></tr></thead><tbody><tr><td>&quot;ads&quot;</td></tr><tr><td>&quot;ads&quot;</td></tr><tr><td>&quot;ads&quot;</td></tr><tr><td>&quot;ads&quot;</td></tr><tr><td>&quot;ads&quot;</td></tr><tr><td>&quot;ads&quot;</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (6, 1)\n",
+       "┌──────┐\n",
+       "│ path │\n",
+       "│ ---  │\n",
+       "│ str  │\n",
+       "╞══════╡\n",
+       "│ ads  │\n",
+       "│ ads  │\n",
+       "│ ads  │\n",
+       "│ ads  │\n",
+       "│ ads  │\n",
+       "│ ads  │\n",
+       "└──────┘"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "edb8ffd4-f044-498b-b6ac-b6ece7f5f12d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "write_deltalake(\"here\", df, mode=\"append\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c019dd18-e2d9-40c4-8ed4-71d3f236c664",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a=DeltaTable(\"here\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "bc328dab-5949-4095-b07a-9c0f2f49bc4a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>path</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ads</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ads</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ads</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ads</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ads</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>ads</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  path\n",
+       "0  ads\n",
+       "1  ads\n",
+       "2  ads\n",
+       "3  ads\n",
+       "4  ads\n",
+       "5  ads"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.to_pandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "9ebf400a-88c0-4a61-a210-5242117d2fc3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/home/xwang/project/gallary-rust/here/part-00001-0c3234aa-04a1-43ce-a326-91f5c79308d7-c000.snappy.parquet',\n",
+       " '/home/xwang/project/gallary-rust/here/part-00001-1ebbf202-cbac-4ff7-8f99-023871bc8bfb-c000.snappy.parquet',\n",
+       " '/home/xwang/project/gallary-rust/here/part-00001-4b479931-a25b-4542-b643-f0e6f21934c6-c000.zstd.parquet']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.file_uris()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "06b047f3-1581-44e5-b9a6-88f743f5a01b",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'polars'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_2758127/1087648309.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mpolars\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'polars'"
+     ]
+    }
+   ],
+   "source": [
+    "import polars"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "ec77ad46-034e-40ab-8eaf-4665e4c3caeb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'numFilesAdded': 1,\n",
+       " 'numFilesRemoved': 4,\n",
+       " 'filesAdded': '{\"avg\":466.0,\"max\":466,\"min\":466,\"totalFiles\":1,\"totalSize\":466}',\n",
+       " 'filesRemoved': '{\"avg\":451.0,\"max\":451,\"min\":451,\"totalFiles\":4,\"totalSize\":1804}',\n",
+       " 'partitionsOptimized': 1,\n",
+       " 'numBatches': 4,\n",
+       " 'totalConsideredFiles': 4,\n",
+       " 'totalFilesSkipped': 0,\n",
+       " 'preserveInsertionOrder': True}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dt=DeltaTable(\"here\")\n",
+    "dt.optimize.compact()"
    ]
   },
   {
@@ -421,7 +660,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
